# brain

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  brainfuck.md  grammar.ebnf
brain/examples/: hello.brn
brain/src/: memory.rs
brain/src/codegen/: mod.rs
brainfuck/: Cargo.toml
brainfuck-visualizer/: .ackrc  .babelrc  .eslintrc  .scss-lint.yml  README.md  index.html  package.json  webpack.config.js
brainfuck-visualizer/app/: index.jsx  main.js  router.jsx  routes.jsx
brainfuck-visualizer/app/actions/: Actions.js  InterpreterActions.js
brainfuck-visualizer/app/components/: App.jsx  Button.jsx  InterpreterLayout.jsx  Output.jsx  Page.jsx  Panel.jsx  SettingsPanel.jsx  Tape.jsx
brainfuck-visualizer/app/containers/: Interpreter.jsx  Output.jsx  Settings.jsx  Tape.jsx
brainfuck-visualizer/app/models/: interpreterState.jsx  model.jsx  settings.jsx
brainfuck-visualizer/app/reducers/: app.jsx  history.jsx  interpreterState.jsx  output.jsx  page.jsx  reducer.jsx  settings.jsx
brainfuck-visualizer/app/services/: interpreter.jsx
brainfuck-visualizer/scss/: index.scss
brainfuck-visualizer/scss/components/: forms.scss  output.scss  page.scss  panel.scss  tape.scss
brainfuck-visualizer/scss/pages/: notFound.scss
brainfuck-visualizer/scss/partials/: _buttons.scss  _variables.scss
brainfuck-visualizer/tests/models/: model.tests.jsx
brainfuck/examples/: 99bottles.bf  sierpinski.bf
brainfuck/src/: lib.rs
contrib/: prelude.brn
contrib/std/: math.brn  text.brn
examples/: branching.brn  calculator.brn  cat.brn  control-flow.brn  declarations.brn  hello.brn  input.brn  names.brn  syntax.brn
examples/brainfuck/: LostKingdom.bf  README.md  mandel.bf
src/: codegen.rs  instruction.rs  instructions.rs  interpreter.rs  lib.rs  main.rs  memory.rs  optimizations.rs  parser.rs
src/codegen/: cells.rs  declarations.rs  errors.rs  input.rs  instruction.rs  mod.rs  operation.rs  output.rs  statements.rs  while_loop.rs
src/core/: mod.rs
src/core/io/: stdio.rs
src/core/primitives/: array.rs  (+3 more)
src/memory/: layout.rs  mod.rs  static_allocator.rs
src/operations/: assignment.rs  block.rs  declaration.rs  error.rs  errors.rs  expression.rs  if_condition.rs  item_type.rs  mod.rs  module.rs  operation.rs  primitives.rs  program.rs  scope.rs  statement.rs  type_definition.rs  while_loop.rs
src/optimizations/: instructions.rs  mod.rs  optimize.rs
src/parser/: ast.rs  error.rs  grammar.rs  mod.rs
src/prelude/: array.rs  boolean.rs  io.rs  mod.rs
(+9 files in other folders)
