[package]
name = "brain"
version = "0.1.2"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
description = "Compiler for the brain programming language. Compiles brain into optimized brainfuck code. Also includes a brainfuck interpreter."
repository = "https://github.com/brain-lang/brain"
readme = "README.md"
keywords = ["brain", "brainfuck", "compiler", "interpreter", "optimizer"]
# crates.io/category_slugs
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
clap = "^2.0"
pest = "0.4"

[[bin]]
name = "brain"
doc = false
