[package]
name = "brain"
version = "0.1.2"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
description = "Compiler for the brain programming language. Compiles brain into optimized brainfuck code. Also includes a brainfuck interpreter."
repository = "https://github.com/brain-lang/brain"
readme = "README.md"
keywords = ["brain", "brainfuck", "compiler", "interpreter", "optimizer"]
# crates.io/category_slugs
categories = ["command-line-interface"]
license = "MIT"

[badges]
# Travis CI: `repository` is required. `branch` is optional; default is `master`
travis-ci = { repository = "brain-lang/brain" }

[dependencies]
clap = "*"
pest = "*"

[[bin]]
name = "brain"
doc = false
